--- a/.env
+++ b/.env
@@ -1,6 +1,6 @@
 MONGO_URL=mongodb://127.0.0.1:27017/steedos
-PORT=5040
-ROOT_URL=http://127.0.0.1:5040
+PORT=5080
+ROOT_URL=http://127.0.0.1:5080/
 MULTIPLE_INSTANCES_COLLECTION_NAME=workflow_instances
 MAIL_URL=
 STEEDOS_CFS_STORE=local
