--- a/steedos-config.yml
+++ b/steedos-config.yml
@@ -23,9 +23,13 @@ tenant:
   background_url: 
   enable_register: true
   enable_forget_password: false
-  enable_create_tenant: true
-  enable_password_login: true
+  enable_create_tenant: false
+  enable_password_login: false
   enable_bind_email: false
-  enable_bind_mobile: false
+  enable_bind_mobile: true
 plugins:
   - "@steedos/accounts"
+  - "@steedos/app-crm"
+  - "@steedos/app-contracts"
+  - "@steedos/plugin-qywx"
+  - "@steedos/plugin-enterprise"
