--- a/package.json
+++ b/package.json
@@ -16,18 +16,18 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@steedos/accounts": "1.22.0-alpha.17",
-        "@steedos/app-contracts": "1.22.0-alpha.17",
-        "@steedos/app-crm": "1.22.0-alpha.18",
-        "@steedos/plugin-enterprise": "1.22.0-alpha.17",
-        "@steedos/plugin-qywx": "^0.0.7",
+        "@steedos/accounts": "1.22.1",
+        "@steedos/app-contracts": "1.22.1",
+        "@steedos/app-crm": "1.22.1",
+        "@steedos/plugin-enterprise": "1.22.1",
+        "@steedos/plugin-qywx": "^0.0.10",
         "@steedos/steedos-plugin-workflow": "^2.1.1",
         "aliyun-sdk": "1.12.3",
         "dotenv-flow": "^3.1.0",
         "node-rsa": "^1.0.8",
         "pug": "^3.0.0",
         "request-ip": "^2.1.3",
-        "steedos-server": "^1.22.0-alpha.17"
+        "steedos-server": "^1.22.1"
     },
     "devDependencies": {
         "nodemon": "^1.19.1"
