--- a/steedos-config.yml
+++ b/steedos-config.yml
@@ -6,7 +6,7 @@ datasources:
       - "./src/**"
 public:
   cfs:
-    store: "local"
+    store: ${STEEDOS_CFS_STORE}
     local: 
       folder: "./storage"
 email:
