--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
         "@steedos/plugin-qywx": "^0.0.10",
         "@steedos/steedos-plugin-workflow": "^2.1.1",
         "aliyun-sdk": "1.12.3",
+        "aws-sdk": "2.0.23",
         "dotenv-flow": "^3.1.0",
         "node-rsa": "^1.0.8",
         "pug": "^3.0.0",
