--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -30,6 +30,7 @@ services:
 
   minio:
     image: minio/minio:RELEASE.2020-11-10T21-02-24Z
+    restart: unless-stopped
     ports:
       - "9000:9000"
     volumes:
