--- a/steedos-config.yml
+++ b/steedos-config.yml
@@ -11,10 +11,10 @@ public:
       folder: ${STEEDOS_STORAGE_DIR}
 cfs:
   aws:
-    endpoint: ${STEEDOS_CFS_ALIYUN_ENDPOINT}
-    bucket: ${STEEDOS_CFS_ALIYUN_BUCKET}
-    accessKeyId: ${STEEDOS_CFS_ALIYUN_ACCESSKEYID}
-    secretAccessKey: ${STEEDOS_CFS_ALIYUN_SECRETACCESSKEY}
+    endpoint: ${STEEDOS_CFS_S3_ENDPOINT}
+    bucket: ${STEEDOS_CFS_S3_BUCKET}
+    accessKeyId: ${STEEDOS_CFS_S3_ACCESSKEYID}
+    secretAccessKey: ${STEEDOS_CFS_S3_SECRETACCESSKEY}
     s3ForcePathStyle: true
     signatureVersion: v4
 email:
