--- a/steedos-config.yml
+++ b/steedos-config.yml
@@ -17,24 +17,24 @@ cfs:
     secretAccessKey: ${STEEDOS_CFS_S3_SECRETACCESSKEY}
     s3ForcePathStyle: true
     signatureVersion: v4
-email:
-  host:
-  port: 465
-  username:
-  password:
-  secure: true
-  from:
 tenant:
   _id:
-  name: 华炎魔方
-  logo_url:
-  background_url:
   enable_register: true
   enable_forget_password: false
-  enable_create_tenant: true
+  saas: false
   enable_password_login: true
-  enable_bind_email: false
-  enable_bind_mobile: false
+  enable_mobile_code_login: true
+  enable_email_code_login: false
+  enable_bind_mobile: ${STEEDOS_TENANT_ENABLE_BIND_MOBILE}
+sms:
+  qcloud:
+    smsqueue_interval: 1000
+    sdkappid: ${STEEDOS_SMS_QCLOUD_SDKAPPID}
+    appkey: ${STEEDOS_SMS_QCLOUD_APPKEY}
+    signname: ${STEEDOS_SMS_QCLOUD_SIGNNAME}
+email:
+  from: 华炎云 <noreply@steedos.com>
+  url: ${MAIL_URL}
 plugins:
   - "@steedos/accounts"
   - "@steedos/app-crm"
