--- a/.env
+++ b/.env
@@ -3,7 +3,8 @@ PORT=5080
 ROOT_URL=http://127.0.0.1:5080/
 MULTIPLE_INSTANCES_COLLECTION_NAME=workflow_instances
 MAIL_URL=
-STEEDOS_CFS_STORE=S3
+STEEDOS_CFS_STORE=local
+STEEDOS_STORAGE_DIR=./storage
 STEEDOS_CFS_S3_ENDPOINT=http://127.0.0.1:9000
 STEEDOS_CFS_S3_BUCKET=steedos
 STEEDOS_CFS_S3_ACCESSKEYID=minioadmin
