--- a/package.json
+++ b/package.json
@@ -32,10 +32,10 @@
     "author": "",
     "license": "ISC",
     "dependencies": {
-        "@steedos/accounts": "1.22.4",
-        "@steedos/app-contracts": "1.22.4",
-        "@steedos/app-crm": "1.22.4",
-        "@steedos/plugin-enterprise": "1.22.4",
+        "@steedos/accounts": "1.22.6",
+        "@steedos/app-contracts": "1.22.6",
+        "@steedos/app-crm": "1.22.6",
+        "@steedos/plugin-enterprise": "1.22.6",
         "@steedos/plugin-qywx": "^0.0.10",
         "@steedos/steedos-plugin-workflow": "^2.1.1",
         "aliyun-sdk": "1.12.3",
@@ -44,7 +44,7 @@
         "node-rsa": "^1.0.8",
         "pug": "^3.0.0",
         "request-ip": "^2.1.3",
-        "steedos-server": "^1.22.4"
+        "steedos-server": "1.22.6"
     },
     "devDependencies": {
         "nodemon": "^1.19.1"
