参考项目管理整理代码，并升级到1.23最新版本内核

--- a/.env
+++ b/.env
@@ -1,26 +1,7 @@
 MONGO_URL=mongodb://127.0.0.1:27017/steedos
 PORT=5080
-ROOT_URL=http://127.0.0.1:5080/
-MULTIPLE_INSTANCES_COLLECTION_NAME=workflow_instances
-MAIL_URL=
-STEEDOS_CFS_STORE=local
-STEEDOS_STORAGE_DIR=./storage
-STEEDOS_CFS_S3_ENDPOINT=http://127.0.0.1:9000
-STEEDOS_CFS_S3_BUCKET=steedos
-STEEDOS_CFS_S3_ACCESSKEYID=minioadmin
-STEEDOS_CFS_S3_SECRETACCESSKEY=minioadmin
-STEEDOS_PUSH_APN_DATA=
-STEEDOS_PUSH_XINGE_ACCESSID=
-STEEDOS_PUSH_XINGE_SECRETKEY=
-STEEDOS_PUSH_HUAWEI_APPID=
-STEEDOS_PUSH_HUAWEI_APPSECRET=
-STEEDOS_PUSH_HUAWEI_APPPKGNAME=
-STEEDOS_PUSH_MI_APPSECRET=
-STEEDOS_PUSH_MI_PRODUCTION=
-STEEDOS_SMS_QCLOUD_SDKAPPID=
-STEEDOS_SMS_QCLOUD_APPKEY=
-STEEDOS_SMS_QCLOUD_SIGNNAME=
-STEEDOS_BILLING_APPID=
-STEEDOS_BILLING_MCH_ID=
-STEEDOS_BILLING_PARTNER_KEY=
-STEEDOS_TENANT_ID=
+ROOT_URL=http://127.0.0.1:5080
+
+METADATA_URL=
+METADATA_SPACE_ID=
+METADATA_AUTH_TOKEN=
