--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@steedos/app-oa",
-    "version": "1.23.0",
+    "version": "1.23.0-alpha.16",
     "description": "",
     "main": "index.js",
     "scripts": {
