--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
     "scripts": {
         "debug": "nodemon server.js",
         "start": "node server.js",
+        "buildPackage": "steedos package:build -n oa -p steedos-app",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
     "author": "",
