--- a/.env
+++ b/.env
@@ -1,6 +1,8 @@
 MONGO_URL=mongodb://127.0.0.1:27017/steedos
 PORT=5080
 ROOT_URL=http://127.0.0.1:5080
+TRANSPORTER=redis://127.0.0.1:6379
+CACHER=redis://127.0.0.1:6379/1
 
 METADATA_URL=
 METADATA_SPACE_ID=
