--- a/package.json
+++ b/package.json
@@ -4,8 +4,10 @@
     "description": "",
     "main": "index.js",
     "scripts": {
-        "debug": "nodemon server.js",
-        "start": "node server.js",
+        "start": "moleculer-runner services",
+        "start:steedos": "cross-env NODEID=STEEDOS-SERVER moleculer-runner services/steedos-server",
+        "start:app": "cross-env NODEID=STEEDOS-APP moleculer-runner --repl services/steedos-app",
+        "console": "cross-env NODEID=STEEDOS-CONSOLE moleculer connect --config ./moleculer.config.js",
         "buildPackage": "steedos package:build -n oa -p steedos-app",
         "test": "echo \"Error: no test specified\" && exit 1"
     },
@@ -16,16 +18,13 @@
         "access": "public"
     },
     "devDependencies": {
-        "@steedos/accounts": "^1.23.23",
+        "@steedos/service-metadata": "~1.0.0",
+        "@steedos/service-package-loader": "~0.0.1",
+        "@steedos/service-steedos-server": "~0.0.1",
         "@steedos/app-contracts": "^1.23.23",
         "@steedos/app-crm": "^1.23.23",
-        "@steedos/plugin-enterprise": "^1.23.23",
-        "@steedos/plugin-qywx": "^0.0.16",
-        "@steedos/steedos-plugin-workflow": "^2.0.8",
-        "@steedos/word-template": "^1.23.0-alpha.16",
         "dotenv-flow": "^3.1.0",
-        "nodemon": "^1.19.1",
-        "steedos-server": "^1.23.23"
+        "nodemon": "^1.19.1"
     },
     "homepage": "https://developer.steedos.com",
     "resolutions": {
