--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
     "name": "@steedos/app-oa",
-    "version": "1.23.23",
+    "version": "2.0.0",
     "description": "",
     "main": "index.js",
     "scripts": {
@@ -18,11 +18,11 @@
         "access": "public"
     },
     "devDependencies": {
-        "@steedos/service-metadata-server": "~1.0.0",
-        "@steedos/service-package-loader": "~0.0.1",
-        "@steedos/service-steedos-server": "~0.0.1",
-        "@steedos/app-contracts": "^1.23.23",
-        "@steedos/app-crm": "^1.23.23",
+        "@steedos/app-contracts": "^2.0.0",
+        "@steedos/app-crm": "^2.0.0",
+        "@steedos/service-metadata-server": "^2.0.0",
+        "@steedos/service-package-loader": "^2.0.0",
+        "@steedos/service-steedos-server": "^2.0.0",
         "dotenv-flow": "^3.1.0",
         "nodemon": "^1.19.1"
     },
